# aerotech

./: .env.example  .env.files.rec.example  .env.rec.example  .gitattributes  .gitignore  README.md  README.txt  extract.ipynb  extract1.ipynb  extract10.ipynb  extract2.ipynb  extract3.ipynb  extract4.ipynb  extract5.ipynb  extract6.ipynb  extract7.ipynb  extract8.ipynb  extract9.ipynb  pyproject.toml  requirements.txt
Fichier_a_passer/: FNP AEC projets - source.xlsx  Projets AEC AE 2025 - source.xlsx  fichier qualité des trigrammes.xlsx
Fichiers source-20251015T123208Z-1-001/Fichiers source/: CatClients.xlsb  Conditionsdepaiement.xlsx  Projets AEC AE 2025 - source.xlsx  Relevé pointages AEB.xlsb  Suivi Projets AEC - source.xlsb
fic/: Conditionsdepaiement.xlsx  FNP AEC projets - source.xlsx  Projets AEC AE 2025 - source.xlsx  Relevé pointages AEB.xlsx  Suivi Projets AEC - source.xlsx
fichier_tests/: FNP AEC projets (1).xlsx  FNP AEC sous-traitance in Situ (1).xlsx  Suivi Projets AEC (1).xlsb  Tauxdechange.xlsx  fichier qualité des trigrammes.xlsx
src/: audit.py  check_db.py  db.py  etl_catclients.py  etl_cdp.py  etl_fnp.py  etl_fqt.py  etl_paae.py  etl_rpa.py  etl_spa.py  logging_utils.py  run_jobs.py  watch_jobs.py
src/aerotech_etl/: __init__.py  cli.py  config.py  db.py  excel_processing.py  logging_utils.py
